Roles, 2FA, Bugfixes

--- a/frontend/src/stylesheets/login-signup.css
+++ b/frontend/src/stylesheets/login-signup.css
@@ -616,6 +616,11 @@ select.modal {
     height: 465px;
 }
 
+.userTable {
+    overflow-y: scroll;
+    height: 100%;
+}
+
 .twoFAContainer {
     width: 100%;
     max-width: 460px;
