--- a/frontend/src/stylesheets/login-signup.css
+++ b/frontend/src/stylesheets/login-signup.css
@@ -520,6 +520,7 @@ select.modal {
     cursor: pointer;
     display: inline-block;
     position: relative;
+    top: 20%;
     font-size: 12px;
     background: #ED2553;
     color: white;
